<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_15_dp"
            android:layout_marginTop="@dimen/space_15_dp"
            android:text="@string/str_code_tips1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18_sp" />

        <ImageView
            android:id="@+id/imgCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_15_dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_15_dp"
            android:layout_marginTop="@dimen/space_15_dp"
            android:layout_marginRight="@dimen/space_15_dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etUrl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_5_dp"
                android:layout_marginBottom="@dimen/space_5_dp"
                android:layout_weight="1"
                android:background="@drawable/bg_input_url_edit"
                android:hint="@string/str_code_edit_tips"
                android:paddingLeft="@dimen/space_5_dp"
                android:paddingRight="@dimen/space_5_dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16_sp" />

            <Button
                android:id="@+id/btnCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_5_dp"
                android:background="@drawable/bg_btn_def"
                android:paddingLeft="@dimen/space_5_dp"
                android:paddingRight="@dimen/space_5_dp"
                android:text="@string/str_generate"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16_sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_15_dp"
            android:layout_marginTop="@dimen/space_20_dp"
            android:text="@string/str_code_tips2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18_sp" />

        <TextView
            android:id="@+id/textDecodeContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_15_dp"
            android:layout_marginTop="@dimen/space_15_dp"
            android:layout_marginBottom="@dimen/space_5_dp"
            android:layout_marginRight="@dimen/space_15_dp"
            android:textColor="@color/selector_qr_code_content_text"
            android:textSize="@dimen/text_size_20_sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_15_dp"
            android:layout_marginTop="@dimen/space_15_dp"
            android:layout_marginRight="@dimen/space_15_dp"
            android:background="@drawable/bg_btn_def"
            android:text="@string/str_picture"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16_sp" />

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_15_dp"
            android:layout_marginTop="@dimen/space_15_dp"
            android:layout_marginRight="@dimen/space_15_dp"
            android:layout_marginBottom="@dimen/space_25_dp"
            android:background="@drawable/bg_btn_def"
            android:text="@string/str_photo"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16_sp" />
    </LinearLayout>
</ScrollView>